[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Shaders/blur.shader" type="Shader" id=1]
[ext_resource path="res://assets/Fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Decision.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/amount = 2.0

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.196078 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.392157 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0.196078 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.992157, 0.988235, 0.988235, 0.392157 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Decision" type="Node2D"]
script = ExtResource( 4 )

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource( 1 )
margin_top = -2.37842
margin_right = 1920.0
margin_bottom = 1077.62
color = Color( 1, 1, 1, 0.94902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftDecision" type="Button" parent="BlurRect"]
material = SubResource( 2 )
anchor_right = 0.492
anchor_bottom = 1.0
margin_right = -0.640076
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Zahodit dopis"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightDecision" type="Button" parent="BlurRect"]
material = SubResource( 2 )
anchor_left = 0.493
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.56012
margin_right = -0.00012207
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jít za věřitelem"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BlurRect/LeftDecision" to="." method="_on_LeftDecision_pressed"]
[connection signal="pressed" from="BlurRect/RightDecision" to="." method="_on_RightDecision_pressed"]
